--- a/package.json
+++ b/package.json
@@ -14,16 +14,16 @@
 	"url" : "https://github.com/monospark/monospark-sphinx-theme.git"
   },
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-sass": "~0.7.2",
-    "grunt-contrib-watch": "~0.4.3",
-    "grunt-contrib-connect": "0.5.0",
-    "grunt-contrib-clean": "0.5.0",
-    "grunt-contrib-copy": "0.5.0",
-    "connect-livereload": "~0.3.0",
-    "grunt-exec": "~0.4.2",
-    "grunt-open": "0.2.2",
-    "matchdep": "~0.1.2"
+    "grunt": "~0.4.5",
+    "matchdep": "~0.3.0",
+    "grunt-contrib-sass": "~0.9.2",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-contrib-connect": "0.9.0",
+    "grunt-contrib-clean": "0.6.0",
+    "grunt-contrib-copy": "0.8.0",
+    "connect-livereload": "~0.5.2",
+    "grunt-exec": "~0.4.6",
+    "grunt-open": "0.2.3",
   },
   "private": true
 }
