--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "grunt-contrib-copy": "0.8.0",
     "connect-livereload": "~0.5.2",
     "grunt-exec": "~0.4.6",
-    "grunt-open": "0.2.3",
+    "grunt-open": "0.2.3"
   },
   "private": true
 }
