Remove another wrong placed comma

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "author": {
     "name" : "Christopher Schnick",
-    "email" : "c.schnick@monospark.org", 
+    "email" : "c.schnick@monospark.org"
   },
   "repository": {
     "type": "git",
